--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -141,6 +141,16 @@
 
             </android.support.v7.widget.CardView>
 
+            <TextView
+                    android:text="@string/quick_search"
+                    android:id="@+id/cardChildText"
+                    android:textSize="14sp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp" />
+
             <com.cyanogenmod.filemanager.ui.widgets.WrappedGridView
                 android:id="@+id/easy_modeView"
                 android:layout_width="match_parent"
