--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -128,6 +128,15 @@
         <item name="android:homeAsUpIndicator">@drawable/material_ripple_up_arrow</item>
     </style>
 
+    <style name="FileManager.Theme.Transparent" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/black_60</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
     <!-- Action bar -->
     <style name="FileManager.Widget.ActionBar.White" parent="@android:style/Widget.Material.Light.ActionBar">
         <item name="android:textColorPrimary">@android:color/white</item>
@@ -153,8 +162,8 @@
     <!-- The text appearance for principal information (text that need to be highlighted) -->
     <style name="primary_text_appearance">
         <item name="android:textSize">@dimen/primary_text_size</item>
-        <item name="android:textColor">@color/black_transparent</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
     <!-- The text appearance for principal information (important but not highlight) -->
@@ -165,8 +174,8 @@
     <!-- The text appearance for secondary information (text with a lower importance) -->
     <style name="secondary_text_appearance">
         <item name="android:textSize">@dimen/secondary_text_size</item>
-        <item name="android:textColor">@color/black_transparent</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/black_54</item>
+        <item name="android:fontFamily">sans-serif</item>
     </style>
 
     <!-- The text appearance for hexeditor -->
