--- a/res/values/dimen.xml
+++ b/res/values/dimen.xml
@@ -78,6 +78,11 @@
     <!-- The navigation view details item row height -->
     <dimen name="navigation_view_details_item_height">72dp</dimen>
 
+    <!-- The navigation view simple view (small) item height -->
+    <dimen name="navigation_view_simple_item_small_height">48dp</dimen>
+    <!-- The navigation view simple view (small) icon size -->
+    <dimen name="navigation_view_simple_item_small_icon_size">24dp</dimen>
+
     <!-- The navigation grid width -->
     <dimen name="navigation_grid_width">85dp</dimen>
     <!-- The navigation grid height -->
