--- a/res/layout/navigation_view_customtitle_breadcrumb.xml
+++ b/res/layout/navigation_view_customtitle_breadcrumb.xml
@@ -25,7 +25,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_alignParentEnd="true"
-    android:contentDescription="@null"
+    android:contentDescription="@string/ab_configuration"
     android:onClick="onActionBarItemClick"
     android:src="@drawable/ic_material_light_expander_open" />
 
