--- a/res/layout/navigation_view_customtitle_configuration.xml
+++ b/res/layout/navigation_view_customtitle_configuration.xml
@@ -58,7 +58,7 @@
     android:layout_width="@dimen/default_buttom_width"
     android:layout_height="match_parent"
     android:layout_alignParentEnd="true"
-    android:contentDescription="@null"
+    android:contentDescription="@string/ab_close"
     android:onClick="onActionBarItemClick"
     android:src="@drawable/ic_material_light_expander_close" />
 
